AUTOMAKE_OPTIONS = foreign

bin_SCRIPTS = tos-ident-flags \
	      tos-install-jni \
	      tos-locate-jre \
	      tos-mote-key \
	      tos-serial-configure \
	      tos-set-symbols \
	      tos-write-image \
	      tos-check-env \
	      tos-storage-stm25p \
	      tos-storage-at45db
	      

bin_PROGRAMS = tos-serial-debug
